[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Gavin Gong <kefengong@gmail.com>"]

[dependencies]
rand = "0.5.5"
hyper = "0.12"
futures = "0.1"
actix-web = "0.7"

[[bin]]
name = "server"
path = "src/server/src/main.rs"

[[bin]]
name = "c"
path = "src/concurrency/src/main.rs"

[[bin]]
name = "actix"
path = "actix_app/src/main.rs"