[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Gavin Gong <kefengong@gmail.com>"]
default-run = "basic"

[dependencies]
rand = "0.8.4"
hyper = "0.14.12"
futures= "0.3.16"

[[bin]]
name = "server"
path = "src/server/src/main.rs"

[[bin]]
name = "c"
path = "src/concurrency/src/main.rs"

[[bin]]
name = "basic"
path = "src/basic/src/main.rs"